@@ -1,3 +1,8 @@
+2009-12-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/setenv.c: Minor error case fix for Windows 
+	* DESCRIPTON: Lower requirement for Rcpp to (>= 0.6.7)
+
 2009-12-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Increase Version: to 0.2.0
